# telegb01

./: .env.template  .gitignore  cam_bot01.py  cam_watch01.py  consumer_redis.py  main_alarm.py  main_cam01.py  main_cam_sound.py  mod_telegram.py  pyproject.toml  requirements.txt
config/: alarm.toml  alarm.toml.win
dev/Rbmq/: consumer_rmq.py  main_cam01_rbmq.py
dev/redis/: main_cam01_redis.py
service/: bk_cambot01.service.txt  bk_cambot02.service.txt  bk_camwatch01.service.txt  bk_camwatch02.service.txt
service/_.config/systemd/user/: bk_cambot01.service  bk_cambot02.service  bk_camwatch01.service  bk_camwatch02.service
